--- a/src/Disco.Remote/Disco.Remote.csproj
+++ b/src/Disco.Remote/Disco.Remote.csproj
@@ -1,15 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
+        <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Disco.Core\Disco.Core.csproj" />
-      <ProjectReference Include="..\Disco.Remote\Disco.Remote.csproj" />
     </ItemGroup>
 
 </Project>
