--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,32 +11,18 @@ steps:
   displayName: Install .NET
   inputs:
     packageType: 'sdk'
-    version: '8.0.x'
+    version: '9.0.x'
 - task: Assembly-Info-NetCore@3
-  displayName: Set Assembly info for Disco.Core
+  displayName: Set AssemblyInfo
   inputs:
     Path: '$(Build.SourcesDirectory)'
-    FileNames: './src/Disco.Core/Disco.Core.csproj'
+    FileNames: |
+      src/Disco.Core/Disco.Core.csproj
+      src/Disco.Remote/Disco.Remote.csproj
     InsertAttributes: false
     FileEncoding: 'auto'
     WriteBOM: false
     PackageId: 'Disco.Core'
-    VersionNumber: '$(Build.BuildNumber)'
-    FileVersionNumber: '$(Build.BuildNumber)'
-    InformationalVersion: '$(Build.BuildNumber)'
-    PackageVersion: '$(Build.BuildNumber)'
-    LogLevel: 'verbose'
-    FailOnWarning: false
-    DisableTelemetry: false
-- task: Assembly-Info-NetCore@3
-  displayName: Set Assembly info for Disco.Remote
-  inputs:
-    Path: '$(Build.SourcesDirectory)'
-    FileNames: './src/Disco.Remote/Disco.Remote.csproj'
-    InsertAttributes: false
-    FileEncoding: 'auto'
-    WriteBOM: false
-    PackageId: 'Disco.Remote'
     VersionNumber: '$(Build.BuildNumber)'
     FileVersionNumber: '$(Build.BuildNumber)'
     InformationalVersion: '$(Build.BuildNumber)'
