Fis Build Script, Disable Telemetry

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
     PackageVersion: '$(Build.BuildNumber)'
     LogLevel: 'verbose'
     FailOnWarning: false
-    DisableTelemetry: false
+    DisableTelemetry: true
 - task: DotNetCoreCLI@2
   displayName: Restore Projects
   inputs:
